--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Kinky Website</title>
+	<title>My  Website</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
